test/functions/iterators/vass/forall-without-leaderfollower.good
forall-without-leaderfollower.chpl:6: error: cannot iterate over values of type TEST
